# ReactorSimulation

./: CMakeLists.txt  README.md
data/cross_sections/capture/: ISOTOPE0.txt
data/cross_sections/total/: U238.txt
data/predefined_cross_sections/absorption/: ISOTOPE0.txt  ISOTOPE1.txt
data/predefined_cross_sections/capture/: ISOTOPE1.txt
data/predefined_cross_sections/fission/: ISOTOPE0.txt
data/predefined_cross_sections/total/: ISOTOPE0.txt  ISOTOPE10.txt  ISOTOPE11.txt  ISOTOPE12.txt  ISOTOPE13.txt  ISOTOPE14.txt  ISOTOPE19.txt  ISOTOPE2.txt  ISOTOPE20.txt  ISOTOPE4.txt  ISOTOPE9.txt
include/: coolant.h  fuel.h  isotopes.h  material.h  moderator.h  simulation.h
src/: coolant.cpp  fuel.cpp  isotopes.cpp  material.cpp  moderator.cpp  poisonSimulation.cpp  simulation.cpp
